finished about me and projects sections

--- a/index.html
+++ b/index.html
@@ -5,12 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Wes Berry's Portfolio</title>
 </head>
 <body>
+    <!-- Intro -->
     <section id="intro">
         <h1>Hello, my name is Wes.</h1>
-        <p>Full Stack Developer</p>
+        <p>I'm a Full Stack Developer.</p>
+    </section>
+    <!-- About Me -->
+    <section id="about">
+        <div>
+            <img src="./images/me_2.jpg" class="box-shadow">
+            <div class="box-shadow">
+                <p>I enjoy solving complex problems that will make other people's lives easier or better. If I know it, I am happy to teach it to others.</p>    
+            </div>
+        </div>
+    </section>
+    <!-- Projects -->
+    <section id="projects">
+        <div id="project_1">
+            <div class="project_text box-shadow">
+                <h1>Windmill Ranch Lodging - Company Website</h1>
+                <p>Was a client-commissioned, full stack website for a Bed & Breakfast.</p>
+                <p class="links">
+                    <a href="https://github.com/wesleyberry/Windmill_Ranch_Static" target="_blank">
+                        <img src="./images/svgs/github.svg" >
+                    </a>
+                    <a href="https://wesleyberry.github.io/Windmill_Ranch_Static/" target="_blank">
+                        <img src="./images/svgs/link.svg" >
+                    </a>
+                </p>
+            </div>
+            <div class="project_images">
+                <img src="./images/1_alpha.png" alt="Windmill Ranch Mobile">
+                <img src="./images/2_alpha.png" alt="Windmill Ranch Laptop">
+            </div>
+        </div>
+        <div id="project_2">
+            <div class="project_text box-shadow">
+                <h1>Inoz Brew and Chew - Company Website</h1>
+                <p>Was a client-commissioned, full stack website for a popular restaurant.</p>
+                <p class="links">
+                    <a href="https://github.com/wesleyberry/Inoz_Static" target="_blank">
+                        <img src="./images/svgs/github.svg" >
+                    </a>
+                    <a href="https://wesleyberry.github.io/Inoz_Static/" target="_blank">
+                        <img src="./images/svgs/link.svg" >
+                    </a>
+                </p>
+            </div>
+            <div class="project_images">
+                <img src="./images/3_alpha.png" alt="Inoz Brew and Chew Mobile">
+                <img src="./images/4_alpha.png" alt="Inoz Brew and Chew Laptop">
+            </div>
+        </div>
+        <div id="project_3">
+            <div class="project_text box-shadow">
+                <h1>Permutations Visualizer</h1>
+                <p>A tool used for visualizing permutations.</p>
+                <p class="links">
+                    <a href="https://github.com/wesleyberry/permutations_visualizer" target="_blank">
+                        <img src="./images/svgs/github.svg" >
+                    </a>
+                    <a href="https://wesleyberry.github.io/permutations_visualizer/" target="_blank">
+                        <img src="./images/svgs/link.svg" >
+                    </a>
+                </p>
+            </div>
+            <div class="project_images_single">
+                <img src="./images/5_alpha_cropped.png" alt="Permutations Visualizer">
+            </div>
+        </div>
     </section>
 </body>
 </html>
