finished about me section; updated resume

--- a/index.html
+++ b/index.html
@@ -21,8 +21,31 @@
         <div>
             <img src="./images/me_2.jpg" class="box-shadow">
             <div class="box-shadow">
-                <p>I enjoy solving complex problems that will make other people's lives easier or better. If I know it, I am happy to teach it to others.</p>    
+                <p>I enjoy solving complex problems that will make other people's lives easier or better. If I know it, I'm happy to teach it to others.</p>    
             </div>
+            <article class="box-shadow">
+                <p id="getInTouch">
+                    Get in touch:
+                    <span>
+                        <a href="mailto:wesleyberry52@gmail.com" class="svg">
+                            <img src="./images/svgs/email.svg" alt="Email wesleyberry52@gmail.com">
+                            <span class="tooltiptext">Email:wesleyberry52@gmail.com</span>
+                        </a>
+                        <a href="https://www.linkedin.com/in/wesley-berry52/" target="_blank" class="svg">
+                            <img src="./images/svgs/linkedin.svg"  alt="LinkedIn">
+                            <span class="tooltiptext">LinkedIn:linkedin.com/in/wesley-berry52</span>
+                        </a>
+                        <a href="https://github.com/wesleyberry" target="_blank" class="svg">
+                            <img src="./images/svgs/github.svg" alt="GitHub">
+                            <span class="tooltiptext">GitHub:github.com/wesleyberry</span>
+                        </a>
+                        <a href="./Wesley_Berry_Resume.pdf" target="_blank" class="svg">
+                            <img src="./images/svgs/resume.svg" alt="Resume">
+                            <span class="tooltiptext">Resume</span>
+                        </a>
+                    </span>
+                </p>
+            </article>
         </div>
     </section>
     <!-- Projects -->
@@ -32,10 +55,10 @@
                 <h1>Windmill Ranch Lodging - Company Website</h1>
                 <p>Was a client-commissioned, full stack website for a Bed & Breakfast.</p>
                 <p class="links">
-                    <a href="https://github.com/wesleyberry/Windmill_Ranch_Static" target="_blank">
+                    <a href="https://github.com/wesleyberry/Windmill_Ranch_Static" target="_blank" class="svg">
                         <img src="./images/svgs/github.svg" >
                     </a>
-                    <a href="https://wesleyberry.github.io/Windmill_Ranch_Static/" target="_blank">
+                    <a href="https://wesleyberry.github.io/Windmill_Ranch_Static/" target="_blank" class="svg">
                         <img src="./images/svgs/link.svg" >
                     </a>
                 </p>
@@ -50,10 +73,10 @@
                 <h1>Inoz Brew and Chew - Company Website</h1>
                 <p>Was a client-commissioned, full stack website for a popular restaurant.</p>
                 <p class="links">
-                    <a href="https://github.com/wesleyberry/Inoz_Static" target="_blank">
+                    <a href="https://github.com/wesleyberry/Inoz_Static" target="_blank" class="svg">
                         <img src="./images/svgs/github.svg" >
                     </a>
-                    <a href="https://wesleyberry.github.io/Inoz_Static/" target="_blank">
+                    <a href="https://wesleyberry.github.io/Inoz_Static/" target="_blank" class="svg">
                         <img src="./images/svgs/link.svg" >
                     </a>
                 </p>
@@ -66,12 +89,12 @@
         <div id="project_3">
             <div class="project_text box-shadow">
                 <h1>Permutations Visualizer</h1>
-                <p>A tool used for visualizing permutations.</p>
+                <p>A nifty tool used for visualizing permutations.</p>
                 <p class="links">
-                    <a href="https://github.com/wesleyberry/permutations_visualizer" target="_blank">
+                    <a href="https://github.com/wesleyberry/permutations_visualizer" target="_blank" class="svg">
                         <img src="./images/svgs/github.svg" >
                     </a>
-                    <a href="https://wesleyberry.github.io/permutations_visualizer/" target="_blank">
+                    <a href="https://wesleyberry.github.io/permutations_visualizer/" target="_blank" class="svg">
                         <img src="./images/svgs/link.svg" >
                     </a>
                 </p>
